// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Extractor should convert results to manifest JSON 1`] = `
{
  "documents": [
    {
      "body": "query MyQuery {
  hello
}",
      "documentEnd": {
        "character": 8,
        "line": 6,
      },
      "documentStart": {
        "character": 26,
        "line": 2,
      },
      "fileName": "main.ts",
      "fragmentName": undefined,
      "operationName": "MyQuery",
      "tag": "",
      "templateLiteralNodeEnd": {
        "character": 9,
        "line": 6,
      },
      "templateLiteralNodeStart": {
        "character": 25,
        "line": 2,
      },
      "type": "query",
    },
    {
      "body": "mutation Greeting {
  greeting {
    reply
  }
}",
      "documentEnd": {
        "character": 8,
        "line": 13,
      },
      "documentStart": {
        "character": 29,
        "line": 7,
      },
      "fileName": "main.ts",
      "fragmentName": undefined,
      "operationName": "Greeting",
      "tag": "",
      "templateLiteralNodeEnd": {
        "character": 9,
        "line": 13,
      },
      "templateLiteralNodeStart": {
        "character": 28,
        "line": 7,
      },
      "type": "mutation",
    },
  ],
}
`;

exports[`Extractor should extract GraphQL documents 1`] = `
[
  "query MyQuery {
  hello
}",
  "mutation Greeting {
  greeting {
    reply
  }
}",
]
`;

exports[`Extractor should extract GraphQL documents and shrink duplicated fragments when removeDuplicatedFragments: false 1`] = `
[
  "fragment A on Query {
  hello
}

fragment A on Query {
  hello
}

query MyQuery {
  ...A
}",
]
`;

exports[`Extractor should extract GraphQL documents and shrink duplicated fragments when removeDuplicatedFragments: true 1`] = `
[
  "fragment A on Query {
  hello
}

query MyQuery {
  ...A
}",
]
`;

exports[`Extractor should store template resolve errors with too complex interpolation 1`] = `
{
  "end": 219,
  "message": "This operation or fragment has too complex interpolation to analyze.",
  "start": 207,
}
`;
